# ubiquiti

./: .env  .gitignore  Justfile  README.md  browser-state-0-fingerprint.json  browser-state-0.json  devices.txt  docker-compose.yml  list_firewall_rules.sh  main.py  pyproject.toml  streamlit_app.py
.github/workflows/: frontend-ci.yml
app/data/: ubiquiti.db
backend/: Dockerfile  README.md  pyproject.toml
backend/src/backend/: __init__.py  app.py  database.py  db_models.py  db_setup.py  defaults.py  device_types.py  events.py  owners.py  router.py  schedule_executor.py  schedules.py  schemas.py  services.py
backend/src/backend/ubiquiti/: cli.py  devices.py  firewall.py  lock.py  network.py  unifi.py  utils.py
backend/tests/: test_cli.py  test_config.py  test_device_detail_api.py  test_devices.py  test_firewall.py  test_lock.py  test_management_api.py  test_owner_devices_api.py  test_schedule_executor.py  test_schedules_api.py  test_session_api.py  test_unifi.py
frontend/: .env  .gitignore  README.md  astro.config.mjs  eslint.config.mjs  package-lock.json  package.json  playwright.config.ts  prettier.config.cjs  tailwind.config.cjs  tsconfig.json  vitest.config.ts
frontend/.husky/_/: husky.sh
frontend/scripts/: install-husky.mjs
frontend/src/: env.d.ts
frontend/src/components/: icons.tsx
frontend/src/components/activity/: ActivityLog.tsx  ControlLog.tsx
frontend/src/components/dashboard/: DeviceDetailView.tsx  FullConsole.tsx  HomeDashboard.tsx  ManageInventory.tsx  OwnerCard.tsx  OwnerDevices.tsx  SelfRegister.tsx
frontend/src/components/modals/: PinModal.tsx  ScheduleModal.tsx
frontend/src/components/sample/: StatusPill.tsx
frontend/src/components/ui/: button.tsx
frontend/src/data/: mock-config.json  mock-schedules.json
frontend/src/layouts/: MainLayout.astro
frontend/src/lib/adapters/: apiAdmin.ts  (+5 more)
frontend/src/pages/: activity.astro  console.astro  index.astro  manage.astro  register.astro
frontend/src/styles/: global.css
frontend/tests/e2e/: home.spec.ts
src/ubiquiti/: __init__.py  cli.py  config.py  devices.py  firewall.py  lock.py  network.py  unifi.py  utils.py
tests/: test_cli.py  test_config.py  test_devices.py  test_firewall.py  test_lock.py  test_unifi.py
(+22 files in other folders)
