[project]
name = "ubiquiti"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Aaron West", email = "aaron.west@esimplicity.com" }
]
requires-python = ">=3.13"
dependencies = [
    "loguru>=0.7.3",
    "mac-vendor-lookup>=0.1.13",
    "requests>=2.32.5",
    "streamlit>=1.51.0",
]

[project.scripts]
ubiquiti = "ubiquiti:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black>=25.9.0",
    "pylance>=0.39.0",
    "pytest>=9.0.0",
    "ruff>=0.14.4",
]

[tool.black]
line-length = 88
target-version = ["py313"]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "B",
    "UP",
    "I",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
